--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,8 @@
 	},
 	"require":{
 		"php":">=5.2",
-		"contao/core":">=3.1.0,<4",
-		"contao-community-alliance/composer-installer":"*"
+		"contao/core-bundle":"~3.1 || ~4.3",
+		"contao-community-alliance/composer-plugin":"~2.4 || ~3.0"
 	},
     "replace": {
         "contao-legacy/short_urls": "self.version"
