--- a/composer.json
+++ b/composer.json
@@ -1,37 +1,40 @@
 {
-	"name":"fritzmg/contao-short-urls",
-	"description":"Simple extension to provide \"Short URLs\", i.e. redirects to existing resources which otherwise have a longer URL.",
-	"keywords":["contao", "form", "email"],
-	"type":"contao-module",
-	"homepage":"http://www.inspiredminds.at",
-	"license":"GPL-2.0",
-	"authors":[
-		{
-			"name":"Fritz Michael Gschwantner",
-			"homepage":"http://www.inspiredminds.at",
-			"email":"fmg@inspiredminds.at",
-			"role":"Developer"
-		}
-	],
-	"support":{
-		"email":"fmg@inspiredminds.at",
-		"issues":"https://github.com/fritzmg/contao-short-urls/issues",
-		"source":"https://github.com/fritzmg/contao-short-urls",
-		"forum":"https://community.contao.org/de"
-	},
-	"require":{
-		"php":">=5.2",
-		"contao/core-bundle":"~3.1 || ~4.3",
-		"contao-community-alliance/composer-plugin":"~2.4 || ~3.0"
-	},
+    "name":"fritzmg/contao-short-urls",
+    "description":"Simple extension to provide \"Short URLs\", i.e. redirects to existing resources which otherwise have a longer URL.",
+    "keywords":["contao", "form", "email"],
+    "type":"contao-module",
+    "homepage":"http://www.inspiredminds.at",
+    "license":"GPL-2.0-only",
+    "authors": [
+        {
+            "name":"Fritz Michael Gschwantner",
+            "homepage":"http://www.inspiredminds.at",
+            "email":"fmg@inspiredminds.at",
+            "role":"Developer"
+        }
+    ],
+    "support": {
+        "email":"fmg@inspiredminds.at",
+        "issues":"https://github.com/fritzmg/contao-short-urls/issues",
+        "source":"https://github.com/fritzmg/contao-short-urls",
+        "forum":"https://community.contao.org/de"
+    },
+    "require": {
+        "php":">=5.2",
+        "contao/core-bundle":"~3.1 || ~4.3",
+        "contao-community-alliance/composer-plugin":"~2.4 || ~3.0"
+    },
+    "conflict": {
+    	"terminal42/header-replay-bundle": ">=1.4.0,<=1.4.2"
+    },
     "replace": {
         "contao-legacy/short_urls": "self.version"
     },
-	"extra":{
-		"contao":{
-			"sources":{
-				"system/modules/short_urls":"system/modules/short_urls"
-			}
-		}
-	}
+    "extra":{
+        "contao":{
+            "sources":{
+                "system/modules/short_urls":"system/modules/short_urls"
+            }
+        }
+    }
 }
